add_library(nanostack
  coap-service/coap-service/coap_service_api.h
  coap-service/source/coap_connection_handler.c
  coap-service/source/coap_message_handler.c
  coap-service/source/coap_security_handler.c
  coap-service/source/coap_service_api.c
  coap-service/source/include/coap_connection_handler.h
  coap-service/source/include/coap_message_handler.h
  coap-service/source/include/coap_security_handler.h
  coap-service/source/include/coap_service_api_internal.h
  mbed-mesh-api/mbed-mesh-api/LoWPANNDInterface.h
  mbed-mesh-api/mbed-mesh-api/MeshInterfaceNanostack.h
  mbed-mesh-api/mbed-mesh-api/NanostackEMACInterface.h
  mbed-mesh-api/mbed-mesh-api/NanostackEthernetInterface.h
  mbed-mesh-api/mbed-mesh-api/NanostackPPPInterface.h
  mbed-mesh-api/mbed-mesh-api/NanostackRfInterface.h
  mbed-mesh-api/mbed-mesh-api/ThreadInterface.h
  mbed-mesh-api/mbed-mesh-api/WisunInterface.h
  mbed-mesh-api/mbed-mesh-api/mesh_interface_types.h
  mbed-mesh-api/source/CallbackHandler.cpp
  mbed-mesh-api/source/LoWPANNDInterface.cpp
  mbed-mesh-api/source/MeshInterfaceNanostack.cpp
  mbed-mesh-api/source/NanostackEMACInterface.cpp
  mbed-mesh-api/source/NanostackEthernetInterface.cpp
  mbed-mesh-api/source/NanostackMemoryManager.cpp
  mbed-mesh-api/source/NanostackPPPInterface.cpp
  mbed-mesh-api/source/ThreadInterface.cpp
  mbed-mesh-api/source/WisunInterface.cpp
  mbed-mesh-api/source/ethernet_tasklet.c
  mbed-mesh-api/source/include/NanostackMemoryManager.h
  mbed-mesh-api/source/include/callback_handler.h
  mbed-mesh-api/source/include/enet_tasklet.h
  mbed-mesh-api/source/include/mesh_system.h
  mbed-mesh-api/source/include/nd_tasklet.h
  mbed-mesh-api/source/include/thread_tasklet.h
  mbed-mesh-api/source/include/wisun_tasklet.h
  mbed-mesh-api/source/mesh_system.c
  mbed-mesh-api/source/nd_tasklet.c
  mbed-mesh-api/source/thread_tasklet.c
  mbed-mesh-api/source/wisun_tasklet.c
  nanostack-hal-mbed-cmsis-rtos/arm_hal_fhss_timer.cpp
  nanostack-hal-mbed-cmsis-rtos/arm_hal_interrupt.c
  nanostack-hal-mbed-cmsis-rtos/arm_hal_interrupt_private.h
  nanostack-hal-mbed-cmsis-rtos/arm_hal_random.c
  nanostack-hal-mbed-cmsis-rtos/arm_hal_timer.cpp
  nanostack-hal-mbed-cmsis-rtos/ns_event_loop.c
  nanostack-hal-mbed-cmsis-rtos/ns_event_loop.h
  nanostack-hal-mbed-cmsis-rtos/ns_event_loop_mbed.cpp
  nanostack-hal-mbed-cmsis-rtos/ns_event_loop_mutex.c
  nanostack-hal-mbed-cmsis-rtos/ns_event_loop_mutex.h
  nanostack-hal-mbed-cmsis-rtos/ns_hal_init.c
  nanostack-hal-mbed-cmsis-rtos/ns_hal_init.h
  nanostack-hal-mbed-cmsis-rtos/nvm/nvm_ram.c
  nanostack-interface/Nanostack.cpp
  nanostack-interface/Nanostack.h
  nanostack-interface/NanostackEthernetPhy.h
  nanostack-interface/NanostackInterface.h
  nanostack-interface/NanostackLockGuard.h
  nanostack-interface/NanostackMACPhy.h
  nanostack-interface/NanostackPPPPhy.h
  nanostack-interface/NanostackPhy.h
  nanostack-interface/NanostackRfPhy.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/eventOS_callback_timer.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/eventOS_event.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/eventOS_event_timer.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/eventOS_scheduler.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/platform/arm_hal_timer.h
  sal-stack-nanostack-eventloop/nanostack-event-loop/platform/eventloop_config.h
  sal-stack-nanostack-eventloop/source/event.c
  sal-stack-nanostack-eventloop/source/event.h
  sal-stack-nanostack-eventloop/source/ns_timeout.c
  sal-stack-nanostack-eventloop/source/ns_timer.c
  sal-stack-nanostack-eventloop/source/ns_timer.h
  sal-stack-nanostack-eventloop/source/system_timer.c
  sal-stack-nanostack-eventloop/source/timer_sys.h
  sal-stack-nanostack/nanostack/cca_api.h
  sal-stack-nanostack/nanostack/ccmLIB.h
  sal-stack-nanostack/nanostack/dhcp_service_api.h
  sal-stack-nanostack/nanostack/ethernet_mac_api.h
  sal-stack-nanostack/nanostack/fhss_api.h
  sal-stack-nanostack/nanostack/fhss_config.h
  sal-stack-nanostack/nanostack/fhss_ws_extension.h
  sal-stack-nanostack/nanostack/mac_api.h
  sal-stack-nanostack/nanostack/mac_common_defines.h
  sal-stack-nanostack/nanostack/mac_filter_api.h
  sal-stack-nanostack/nanostack/mac_mcps.h
  sal-stack-nanostack/nanostack/mlme.h
  sal-stack-nanostack/nanostack/multicast_api.h
  sal-stack-nanostack/nanostack/net_6lowpan_parameter_api.h
  sal-stack-nanostack/nanostack/net_address_extension.h
  sal-stack-nanostack/nanostack/net_fhss.h
  sal-stack-nanostack/nanostack/net_interface.h
  sal-stack-nanostack/nanostack/net_ipv6_api.h
  sal-stack-nanostack/nanostack/net_load_balance_api.h
  sal-stack-nanostack/nanostack/net_mle_api.h
  sal-stack-nanostack/nanostack/net_nvm_api.h
  sal-stack-nanostack/nanostack/net_nwk_scan.h
  sal-stack-nanostack/nanostack/net_pana_parameters_api.h
  sal-stack-nanostack/nanostack/net_polling_api.h
  sal-stack-nanostack/nanostack/net_rpl.h
  sal-stack-nanostack/nanostack/net_sleep.h
  sal-stack-nanostack/nanostack/net_test_api.h
  sal-stack-nanostack/nanostack/net_thread_test.h
  sal-stack-nanostack/nanostack/net_ws_test.h
  sal-stack-nanostack/nanostack/ns_address.h
  sal-stack-nanostack/nanostack/ns_conf.h
  sal-stack-nanostack/nanostack/ns_file_system.h
  sal-stack-nanostack/nanostack/ns_mdns_api.h
  sal-stack-nanostack/nanostack/ns_sha256.h
  sal-stack-nanostack/nanostack/ns_virtual_rf_api.h
  sal-stack-nanostack/nanostack/nwk_stats_api.h
  sal-stack-nanostack/nanostack/platform/arm_hal_aes.h
  sal-stack-nanostack/nanostack/platform/arm_hal_phy.h
  sal-stack-nanostack/nanostack/platform/os_whiteboard.h
  sal-stack-nanostack/nanostack/platform/topo_trace.h
  sal-stack-nanostack/nanostack/serial_mac_api.h
  sal-stack-nanostack/nanostack/shalib.h
  sal-stack-nanostack/nanostack/socket_api.h
  sal-stack-nanostack/nanostack/sw_mac.h
  sal-stack-nanostack/nanostack/thread_bbr_api.h
  sal-stack-nanostack/nanostack/thread_border_router_api.h
  sal-stack-nanostack/nanostack/thread_commissioning_api.h
  sal-stack-nanostack/nanostack/thread_dhcpv6_server.h
  sal-stack-nanostack/nanostack/thread_diagcop_lib.h
  sal-stack-nanostack/nanostack/thread_lowpower_api.h
  sal-stack-nanostack/nanostack/thread_management_api.h
  sal-stack-nanostack/nanostack/thread_management_if.h
  sal-stack-nanostack/nanostack/thread_meshcop_lib.h
  sal-stack-nanostack/nanostack/thread_net_config_api.h
  sal-stack-nanostack/nanostack/whiteboard_api.h
  sal-stack-nanostack/nanostack/ws_bbr_api.h
  sal-stack-nanostack/nanostack/ws_management_api.h
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/Generic/network_lib.c
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/Generic/protocol_6lowpan.c
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/Generic/protocol_6lowpan_bootstrap.c
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/Generic/protocol_6lowpan_interface.c
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/network_lib.h
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/protocol_6lowpan.h
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/protocol_6lowpan_bootstrap.h
  sal-stack-nanostack/source/6LoWPAN/Bootstraps/protocol_6lowpan_interface.h
  sal-stack-nanostack/source/6LoWPAN/Fragmentation/cipv6_fragmenter.c
  sal-stack-nanostack/source/6LoWPAN/Fragmentation/cipv6_fragmenter.h
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/6lowpan_iphc.c
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/cipv6.h
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/iphc_compress.c
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/iphc_compress.h
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/iphc_decompress.c
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/iphc_decompress.h
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/lowpan_context.c
  sal-stack-nanostack/source/6LoWPAN/IPHC_Decode/lowpan_context.h
  sal-stack-nanostack/source/6LoWPAN/MAC/beacon_handler.c
  sal-stack-nanostack/source/6LoWPAN/MAC/beacon_handler.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_data_poll.c
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_data_poll.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_helper.c
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_helper.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_ie_lib.c
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_ie_lib.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_pairwise_key.c
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_pairwise_key.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_response_handler.c
  sal-stack-nanostack/source/6LoWPAN/MAC/mac_response_handler.h
  sal-stack-nanostack/source/6LoWPAN/MAC/mpx_api.h
  sal-stack-nanostack/source/6LoWPAN/Mesh/mesh.c
  sal-stack-nanostack/source/6LoWPAN/Mesh/mesh.h
  sal-stack-nanostack/source/6LoWPAN/ND/nd_defines.h
  sal-stack-nanostack/source/6LoWPAN/ND/nd_router_object.c
  sal-stack-nanostack/source/6LoWPAN/ND/nd_router_object.h
  sal-stack-nanostack/source/6LoWPAN/NVM/nwk_nvm.c
  sal-stack-nanostack/source/6LoWPAN/NVM/nwk_nvm.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bbr_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bbr_api_internal.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bbr_commercial.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bbr_commercial.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_beacon.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_beacon.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bootstrap.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_bootstrap.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_border_router_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_border_router_api_internal.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_ccm.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_ccm.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_commissioning_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_commissioning_if.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_commissioning_if.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_common.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_common.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_config.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_constants.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_dhcpv6_server.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_dhcpv6_server.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_diagnostic.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_diagnostic.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_discovery.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_discovery.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_host_bootstrap.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_host_bootstrap.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_joiner_application.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_joiner_application.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_leader_service.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_leader_service.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_lowpower_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_lowpower_private_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_lowpower_private_api.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_client.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_client.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_if.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_internal.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_server.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_management_server.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_mdns.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_mdns.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_meshcop_lib.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_mle_message_handler.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_mle_message_handler.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_nd.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_nd.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_neighbor_class.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_neighbor_class.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_net_config_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_data_lib.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_data_lib.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_data_storage.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_data_storage.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_synch.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_network_synch.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_nvm_store.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_nvm_store.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_resolution_client.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_resolution_client.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_resolution_server.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_resolution_server.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_router_bootstrap.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_router_bootstrap.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_routing.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_routing.h
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_test_api.c
  sal-stack-nanostack/source/6LoWPAN/Thread/thread_tmfcop_lib.h
  sal-stack-nanostack/source/6LoWPAN/adaptation_interface.c
  sal-stack-nanostack/source/6LoWPAN/lowpan_adaptation_interface.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_bbr_api.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_bbr_api_internal.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_bootstrap.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_bootstrap.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_common.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_common.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_common_defines.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_config.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_auth_relay.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_auth_relay.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_pdu.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_pdu.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_relay.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_relay.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_relay_lib.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_eapol_relay_lib.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_empty_functions.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_ie_lib.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_ie_lib.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_llc.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_llc_data_service.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_management_api.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_mpx_header.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_mpx_header.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_neighbor_class.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_neighbor_class.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_auth.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_auth.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_controller.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_controller.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_lib.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_lib.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_nvm_data.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_nvm_data.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_nvm_store.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_nvm_store.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_supp.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_supp.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_timers.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_pae_timers.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_stats.c
  sal-stack-nanostack/source/6LoWPAN/ws/ws_stats.h
  sal-stack-nanostack/source/6LoWPAN/ws/ws_test_api.c
  sal-stack-nanostack/source/BorderRouter/border_router.c
  sal-stack-nanostack/source/BorderRouter/border_router.h
  sal-stack-nanostack/source/Common_Protocols/icmpv6.c
  sal-stack-nanostack/source/Common_Protocols/icmpv6.h
  sal-stack-nanostack/source/Common_Protocols/icmpv6_prefix.c
  sal-stack-nanostack/source/Common_Protocols/icmpv6_prefix.h
  sal-stack-nanostack/source/Common_Protocols/icmpv6_radv.c
  sal-stack-nanostack/source/Common_Protocols/icmpv6_radv.h
  sal-stack-nanostack/source/Common_Protocols/ip.h
  sal-stack-nanostack/source/Common_Protocols/ipv6.c
  sal-stack-nanostack/source/Common_Protocols/ipv6.h
  sal-stack-nanostack/source/Common_Protocols/ipv6_constants.h
  sal-stack-nanostack/source/Common_Protocols/ipv6_flow.c
  sal-stack-nanostack/source/Common_Protocols/ipv6_flow.h
  sal-stack-nanostack/source/Common_Protocols/ipv6_fragmentation.c
  sal-stack-nanostack/source/Common_Protocols/ipv6_fragmentation.h
  sal-stack-nanostack/source/Common_Protocols/ipv6_resolution.c
  sal-stack-nanostack/source/Common_Protocols/ipv6_resolution.h
  sal-stack-nanostack/source/Common_Protocols/mld.c
  sal-stack-nanostack/source/Common_Protocols/mld.h
  sal-stack-nanostack/source/Common_Protocols/tcp.c
  sal-stack-nanostack/source/Common_Protocols/tcp.h
  sal-stack-nanostack/source/Common_Protocols/udp.c
  sal-stack-nanostack/source/Common_Protocols/udp.h
  sal-stack-nanostack/source/Core/buffer_dyn.c
  sal-stack-nanostack/source/Core/include/ns_address_internal.h
  sal-stack-nanostack/source/Core/include/ns_buffer.h
  sal-stack-nanostack/source/Core/include/ns_error_types.h
  sal-stack-nanostack/source/Core/include/ns_monitor.h
  sal-stack-nanostack/source/Core/include/ns_socket.h
  sal-stack-nanostack/source/Core/include/sockbuf.h
  sal-stack-nanostack/source/Core/ns_address_internal.c
  sal-stack-nanostack/source/Core/ns_monitor.c
  sal-stack-nanostack/source/Core/ns_socket.c
  sal-stack-nanostack/source/Core/sockbuf.c
  sal-stack-nanostack/source/DHCPv6_Server/DHCPv6_Server_service.c
  sal-stack-nanostack/source/DHCPv6_Server/DHCPv6_server_service.h
  sal-stack-nanostack/source/DHCPv6_client/dhcpv6_client_api.h
  sal-stack-nanostack/source/DHCPv6_client/dhcpv6_client_service.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_data_buffer.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_defines.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_fhss_callbacks.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_fhss_callbacks.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_filter.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_filter.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_header_helper_functions.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_header_helper_functions.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_indirect_data.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_indirect_data.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_mcps_sap.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_mcps_sap.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_mlme.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_mlme.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_pd_sap.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_pd_sap.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_security_mib.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_security_mib.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_timer.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/mac_timer.h
  sal-stack-nanostack/source/MAC/IEEE802_15_4/sw_mac.c
  sal-stack-nanostack/source/MAC/IEEE802_15_4/sw_mac_internal.h
  sal-stack-nanostack/source/MAC/ethernet/ethernet_mac_api.c
  sal-stack-nanostack/source/MAC/rf_driver_storage.c
  sal-stack-nanostack/source/MAC/rf_driver_storage.h
  sal-stack-nanostack/source/MAC/serial/serial_mac_api.c
  sal-stack-nanostack/source/MAC/virtual_rf/virtual_rf_client.c
  sal-stack-nanostack/source/MAC/virtual_rf/virtual_rf_defines.h
  sal-stack-nanostack/source/MAC/virtual_rf/virtual_rf_driver.c
  sal-stack-nanostack/source/MLE/mle.c
  sal-stack-nanostack/source/MLE/mle.h
  sal-stack-nanostack/source/MLE/mle_tlv.c
  sal-stack-nanostack/source/MLE/mle_tlv.h
  sal-stack-nanostack/source/MPL/mpl.c
  sal-stack-nanostack/source/MPL/mpl.h
  sal-stack-nanostack/source/NWK_INTERFACE/Include/protocol.h
  sal-stack-nanostack/source/NWK_INTERFACE/Include/protocol_abstract.h
  sal-stack-nanostack/source/NWK_INTERFACE/Include/protocol_stats.h
  sal-stack-nanostack/source/NWK_INTERFACE/Include/protocol_timer.h
  sal-stack-nanostack/source/NWK_INTERFACE/protocol_core.c
  sal-stack-nanostack/source/NWK_INTERFACE/protocol_core_sleep.c
  sal-stack-nanostack/source/NWK_INTERFACE/protocol_stats.c
  sal-stack-nanostack/source/NWK_INTERFACE/protocol_timer.c
  sal-stack-nanostack/source/RPL/rpl_control.c
  sal-stack-nanostack/source/RPL/rpl_control.h
  sal-stack-nanostack/source/RPL/rpl_data.c
  sal-stack-nanostack/source/RPL/rpl_data.h
  sal-stack-nanostack/source/RPL/rpl_downward.c
  sal-stack-nanostack/source/RPL/rpl_downward.h
  sal-stack-nanostack/source/RPL/rpl_mrhof.c
  sal-stack-nanostack/source/RPL/rpl_mrhof.h
  sal-stack-nanostack/source/RPL/rpl_objective.c
  sal-stack-nanostack/source/RPL/rpl_objective.h
  sal-stack-nanostack/source/RPL/rpl_of0.c
  sal-stack-nanostack/source/RPL/rpl_of0.h
  sal-stack-nanostack/source/RPL/rpl_policy.c
  sal-stack-nanostack/source/RPL/rpl_policy.h
  sal-stack-nanostack/source/RPL/rpl_protocol.h
  sal-stack-nanostack/source/RPL/rpl_structures.h
  sal-stack-nanostack/source/RPL/rpl_upward.c
  sal-stack-nanostack/source/RPL/rpl_upward.h
  sal-stack-nanostack/source/Security/Common/sec_lib.h
  sal-stack-nanostack/source/Security/Common/sec_lib_definitions.h
  sal-stack-nanostack/source/Security/Common/security_lib.c
  sal-stack-nanostack/source/Security/PANA/eap_protocol.c
  sal-stack-nanostack/source/Security/PANA/eap_protocol.h
  sal-stack-nanostack/source/Security/PANA/pana.c
  sal-stack-nanostack/source/Security/PANA/pana.h
  sal-stack-nanostack/source/Security/PANA/pana_avp.c
  sal-stack-nanostack/source/Security/PANA/pana_avp.h
  sal-stack-nanostack/source/Security/PANA/pana_client.c
  sal-stack-nanostack/source/Security/PANA/pana_eap_header.c
  sal-stack-nanostack/source/Security/PANA/pana_eap_header.h
  sal-stack-nanostack/source/Security/PANA/pana_header.c
  sal-stack-nanostack/source/Security/PANA/pana_header.h
  sal-stack-nanostack/source/Security/PANA/pana_internal_api.h
  sal-stack-nanostack/source/Security/PANA/pana_nvm.h
  sal-stack-nanostack/source/Security/PANA/pana_relay_table.c
  sal-stack-nanostack/source/Security/PANA/pana_relay_table.h
  sal-stack-nanostack/source/Security/PANA/pana_server.c
  sal-stack-nanostack/source/Security/TLS/tls_ccm_crypt.c
  sal-stack-nanostack/source/Security/TLS/tls_ccm_crypt.h
  sal-stack-nanostack/source/Security/TLS/tls_lib.c
  sal-stack-nanostack/source/Security/TLS/tls_lib.h
  sal-stack-nanostack/source/Security/eapol/eapol_helper.c
  sal-stack-nanostack/source/Security/eapol/eapol_helper.h
  sal-stack-nanostack/source/Security/eapol/kde_helper.c
  sal-stack-nanostack/source/Security/eapol/kde_helper.h
  sal-stack-nanostack/source/Security/kmp/kmp_addr.c
  sal-stack-nanostack/source/Security/kmp/kmp_addr.h
  sal-stack-nanostack/source/Security/kmp/kmp_api.c
  sal-stack-nanostack/source/Security/kmp/kmp_api.h
  sal-stack-nanostack/source/Security/kmp/kmp_eapol_pdu_if.c
  sal-stack-nanostack/source/Security/kmp/kmp_eapol_pdu_if.h
  sal-stack-nanostack/source/Security/kmp/kmp_socket_if.c
  sal-stack-nanostack/source/Security/kmp/kmp_socket_if.h
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/auth_eap_tls_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/auth_eap_tls_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/eap_tls_sec_prot_lib.c
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/eap_tls_sec_prot_lib.h
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/supp_eap_tls_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot/supp_eap_tls_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/fwh_sec_prot/auth_fwh_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/fwh_sec_prot/auth_fwh_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/fwh_sec_prot/supp_fwh_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/fwh_sec_prot/supp_fwh_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/gkh_sec_prot/auth_gkh_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/gkh_sec_prot/auth_gkh_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/gkh_sec_prot/supp_gkh_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/gkh_sec_prot/supp_gkh_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/key_sec_prot/key_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/key_sec_prot/key_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/sec_prot.h
  sal-stack-nanostack/source/Security/protocols/sec_prot_certs.c
  sal-stack-nanostack/source/Security/protocols/sec_prot_certs.h
  sal-stack-nanostack/source/Security/protocols/sec_prot_keys.c
  sal-stack-nanostack/source/Security/protocols/sec_prot_keys.h
  sal-stack-nanostack/source/Security/protocols/sec_prot_lib.c
  sal-stack-nanostack/source/Security/protocols/sec_prot_lib.h
  sal-stack-nanostack/source/Security/protocols/tls_sec_prot/tls_sec_prot.c
  sal-stack-nanostack/source/Security/protocols/tls_sec_prot/tls_sec_prot.h
  sal-stack-nanostack/source/Security/protocols/tls_sec_prot/tls_sec_prot_lib.c
  sal-stack-nanostack/source/Security/protocols/tls_sec_prot/tls_sec_prot_lib.h
  sal-stack-nanostack/source/Service_Libs/CCM_lib/ccm_security.c
  sal-stack-nanostack/source/Service_Libs/CCM_lib/mbedOS/aes_mbedtls_adapter.c
  sal-stack-nanostack/source/Service_Libs/Neighbor_cache/neighbor_cache.c
  sal-stack-nanostack/source/Service_Libs/Neighbor_cache/neighbor_table_definition.h
  sal-stack-nanostack/source/Service_Libs/SHA256_Lib/ns_sha256.c
  sal-stack-nanostack/source/Service_Libs/SHA256_Lib/shalib.c
  sal-stack-nanostack/source/Service_Libs/Trickle/trickle.c
  sal-stack-nanostack/source/Service_Libs/Trickle/trickle.h
  sal-stack-nanostack/source/Service_Libs/blacklist/blacklist.c
  sal-stack-nanostack/source/Service_Libs/blacklist/blacklist.h
  sal-stack-nanostack/source/Service_Libs/etx/etx.c
  sal-stack-nanostack/source/Service_Libs/etx/etx.h
  sal-stack-nanostack/source/Service_Libs/fhss/channel_functions.c
  sal-stack-nanostack/source/Service_Libs/fhss/channel_functions.h
  sal-stack-nanostack/source/Service_Libs/fhss/channel_list.c
  sal-stack-nanostack/source/Service_Libs/fhss/channel_list.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_channel.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_channel.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_common.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_common.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_configuration_interface.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_statistics.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_statistics.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_ws.c
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_ws.h
  sal-stack-nanostack/source/Service_Libs/fhss/fhss_ws_empty_functions.c
  sal-stack-nanostack/source/Service_Libs/fnv_hash/fnv_hash.c
  sal-stack-nanostack/source/Service_Libs/fnv_hash/fnv_hash.h
  sal-stack-nanostack/source/Service_Libs/hmac/hmac_sha1.c
  sal-stack-nanostack/source/Service_Libs/hmac/hmac_sha1.h
  sal-stack-nanostack/source/Service_Libs/ieee_802_11/ieee_802_11.c
  sal-stack-nanostack/source/Service_Libs/ieee_802_11/ieee_802_11.h
  sal-stack-nanostack/source/Service_Libs/load_balance/load_balance.c
  sal-stack-nanostack/source/Service_Libs/load_balance/load_balance_api.h
  sal-stack-nanostack/source/Service_Libs/mac_neighbor_table/mac_neighbor_table.c
  sal-stack-nanostack/source/Service_Libs/mac_neighbor_table/mac_neighbor_table.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/fnet.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/fnet_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/compiler/fnet_comp.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/compiler/fnet_comp_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/cpu/fnet_cpu.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/dns/fnet_dns.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/dns/fnet_dns_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/dns/fnet_dns_prv.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/fnet_services.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/fnet_services_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/mdns/fnet_mdns.c
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/mdns/fnet_mdns.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/mdns/fnet_mdns_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/poll/fnet_poll.c
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/poll/fnet_poll.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/serial/fnet_serial.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/serial/fnet_serial_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_arp.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_assert.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_debug.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_error.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_eth.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_icmp6.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_inet.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_ip.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_ip6.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_isr.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_mempool.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_nd6.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_netbuf.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_netif.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_netif_prv.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_socket.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_stack.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_stack_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_stdlib.c
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_stdlib.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_timer.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack/fnet_timer_prv.h
  sal-stack-nanostack/source/Service_Libs/mdns/fnet_user_config.h
  sal-stack-nanostack/source/Service_Libs/mdns/ns_fnet_events.c
  sal-stack-nanostack/source/Service_Libs/mdns/ns_fnet_events.h
  sal-stack-nanostack/source/Service_Libs/mdns/ns_fnet_port.c
  sal-stack-nanostack/source/Service_Libs/mdns/ns_fnet_types.h
  sal-stack-nanostack/source/Service_Libs/mdns/ns_mdns_api.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_api.h
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_buffer.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_buffer.h
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_frame_counter_table.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_frame_counter_table.h
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_interface.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_interface.h
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_security.c
  sal-stack-nanostack/source/Service_Libs/mle_service/mle_service_security.h
  sal-stack-nanostack/source/Service_Libs/nd_proxy/nd_proxy.c
  sal-stack-nanostack/source/Service_Libs/nd_proxy/nd_proxy.h
  sal-stack-nanostack/source/Service_Libs/nist_aes_kw/nist_aes_kw.c
  sal-stack-nanostack/source/Service_Libs/nist_aes_kw/nist_aes_kw.h
  sal-stack-nanostack/source/Service_Libs/pan_blacklist/pan_blacklist.c
  sal-stack-nanostack/source/Service_Libs/pan_blacklist/pan_blacklist_api.h
  sal-stack-nanostack/source/Service_Libs/utils/isqrt.c
  sal-stack-nanostack/source/Service_Libs/utils/isqrt.h
  sal-stack-nanostack/source/Service_Libs/utils/ns_conf.c
  sal-stack-nanostack/source/Service_Libs/utils/ns_crc.c
  sal-stack-nanostack/source/Service_Libs/utils/ns_crc.h
  sal-stack-nanostack/source/Service_Libs/utils/ns_file_system.c
  sal-stack-nanostack/source/Service_Libs/whiteboard/whiteboard.c
  sal-stack-nanostack/source/Service_Libs/whiteboard/whiteboard.h
  sal-stack-nanostack/source/configs/base/cfg_ethernet.h
  sal-stack-nanostack/source/configs/base/cfg_local_socket.h
  sal-stack-nanostack/source/configs/base/cfg_lowpan_border_router.h
  sal-stack-nanostack/source/configs/base/cfg_lowpan_host.h
  sal-stack-nanostack/source/configs/base/cfg_lowpan_router.h
  sal-stack-nanostack/source/configs/base/cfg_rf_tunnel.h
  sal-stack-nanostack/source/configs/base/cfg_thread_border_router.h
  sal-stack-nanostack/source/configs/base/cfg_thread_end_device.h
  sal-stack-nanostack/source/configs/base/cfg_thread_full_end_device.h
  sal-stack-nanostack/source/configs/base/cfg_thread_router.h
  sal-stack-nanostack/source/configs/base/cfg_ws_border_router.h
  sal-stack-nanostack/source/configs/base/cfg_ws_router.h
  sal-stack-nanostack/source/configs/cfg_ethernet_host.h
  sal-stack-nanostack/source/configs/cfg_generic.h
  sal-stack-nanostack/source/configs/cfg_lowpan_border_router.h
  sal-stack-nanostack/source/configs/cfg_lowpan_border_router_rf_tunnel.h
  sal-stack-nanostack/source/configs/cfg_lowpan_border_router_rf_tunnel_ecc.h
  sal-stack-nanostack/source/configs/cfg_lowpan_border_router_rf_tunnel_ecc_release.h
  sal-stack-nanostack/source/configs/cfg_lowpan_host.h
  sal-stack-nanostack/source/configs/cfg_lowpan_router.h
  sal-stack-nanostack/source/configs/cfg_lowpan_router_ecc.h
  sal-stack-nanostack/source/configs/cfg_lowpan_router_ecc_release.h
  sal-stack-nanostack/source/configs/cfg_nanostack_full.h
  sal-stack-nanostack/source/configs/cfg_nanostack_full_debug.h
  sal-stack-nanostack/source/configs/cfg_rf_interface.h
  sal-stack-nanostack/source/configs/cfg_thread_border_router.h
  sal-stack-nanostack/source/configs/cfg_thread_end_device.h
  sal-stack-nanostack/source/configs/cfg_thread_full_end_device.h
  sal-stack-nanostack/source/configs/cfg_thread_router.h
  sal-stack-nanostack/source/configs/cfg_thread_thci.h
  sal-stack-nanostack/source/configs/cfg_ws_border_router.h
  sal-stack-nanostack/source/configs/cfg_ws_router.h
  sal-stack-nanostack/source/ipv6_stack/ipv6_routing_table.c
  sal-stack-nanostack/source/ipv6_stack/ipv6_routing_table.h
  sal-stack-nanostack/source/ipv6_stack/protocol_ipv6.c
  sal-stack-nanostack/source/ipv6_stack/protocol_ipv6.h
  sal-stack-nanostack/source/libDHCPv6/dhcp_service_api.c
  sal-stack-nanostack/source/libDHCPv6/libDHCPv6.c
  sal-stack-nanostack/source/libDHCPv6/libDHCPv6.h
  sal-stack-nanostack/source/libDHCPv6/libDHCPv6_server.c
  sal-stack-nanostack/source/libDHCPv6/libDHCPv6_server.h
  sal-stack-nanostack/source/libNET/src/multicast_api.c
  sal-stack-nanostack/source/libNET/src/net_6lowpan_parameter_api.c
  sal-stack-nanostack/source/libNET/src/net_ipv6.c
  sal-stack-nanostack/source/libNET/src/net_load_balance.c
  sal-stack-nanostack/source/libNET/src/net_load_balance_internal.h
  sal-stack-nanostack/source/libNET/src/net_mle.c
  sal-stack-nanostack/source/libNET/src/net_rpl.c
  sal-stack-nanostack/source/libNET/src/net_short_address_extension.c
  sal-stack-nanostack/source/libNET/src/net_test.c
  sal-stack-nanostack/source/libNET/src/ns_net.c
  sal-stack-nanostack/source/libNET/src/socket_api.c
  sal-stack-nanostack/source/nsconfig.h
)


target_link_libraries(nanostack frameworks)
target_link_libraries(nanostack netsocket)

target_include_directories(nanostack
    PUBLIC
        .
        sal-stack-nanostack/source/libNET/src
        sal-stack-nanostack/source/libNET
        sal-stack-nanostack/source/libDHCPv6
        sal-stack-nanostack/source/ipv6_stack
        sal-stack-nanostack/source/configs/base
        sal-stack-nanostack/source/configs
        sal-stack-nanostack/source/Service_Libs/whiteboard
        sal-stack-nanostack/source/Service_Libs/utils
        sal-stack-nanostack/source/Service_Libs/pan_blacklist
        sal-stack-nanostack/source/Service_Libs/nist_aes_kw
        sal-stack-nanostack/source/Service_Libs/nd_proxy
        sal-stack-nanostack/source/Service_Libs/mle_service
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/serial
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/poll
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/mdns
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/dns
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/cpu
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/compiler
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port
        sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack
        sal-stack-nanostack/source/Service_Libs/mdns/fnet
        sal-stack-nanostack/source/Service_Libs/mdns
        sal-stack-nanostack/source/Service_Libs/mac_neighbor_table
        sal-stack-nanostack/source/Service_Libs/load_balance
        sal-stack-nanostack/source/Service_Libs/ieee_802_11
        sal-stack-nanostack/source/Service_Libs/hmac
        sal-stack-nanostack/source/Service_Libs/fnv_hash
        sal-stack-nanostack/source/Service_Libs/fhss
        sal-stack-nanostack/source/Service_Libs/etx
        sal-stack-nanostack/source/Service_Libs/blacklist
        sal-stack-nanostack/source/Service_Libs/Trickle
        sal-stack-nanostack/source/Service_Libs/Neighbor_cache
        sal-stack-nanostack/source/Service_Libs
        sal-stack-nanostack/source/Security/protocols/tls_sec_prot
        sal-stack-nanostack/source/Security/protocols/key_sec_prot
        sal-stack-nanostack/source/Security/protocols/gkh_sec_prot
        sal-stack-nanostack/source/Security/protocols/fwh_sec_prot
        sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot
        sal-stack-nanostack/source/Security/protocols
        sal-stack-nanostack/source/Security/kmp
        sal-stack-nanostack/source/Security/eapol
        sal-stack-nanostack/source/Security/TLS
        sal-stack-nanostack/source/Security/PANA
        sal-stack-nanostack/source/Security/Common
        sal-stack-nanostack/source/Security
        sal-stack-nanostack/source/RPL
        sal-stack-nanostack/source/NWK_INTERFACE/Include
        sal-stack-nanostack/source/NWK_INTERFACE
        sal-stack-nanostack/source/MPL
        sal-stack-nanostack/source/MLE
        sal-stack-nanostack/source/MAC/virtual_rf
        sal-stack-nanostack/source/MAC/IEEE802_15_4
        sal-stack-nanostack/source/MAC
        sal-stack-nanostack/source/DHCPv6_client
        sal-stack-nanostack/source/DHCPv6_Server
        sal-stack-nanostack/source/Core/include
        sal-stack-nanostack/source/Core
        sal-stack-nanostack/source/Common_Protocols
        sal-stack-nanostack/source/BorderRouter
        sal-stack-nanostack/source/6LoWPAN/ws
        sal-stack-nanostack/source/6LoWPAN/Thread
        sal-stack-nanostack/source/6LoWPAN/NVM
        sal-stack-nanostack/source/6LoWPAN/ND
        sal-stack-nanostack/source/6LoWPAN/Mesh
        sal-stack-nanostack/source/6LoWPAN/MAC
        sal-stack-nanostack/source/6LoWPAN/IPHC_Decode
        sal-stack-nanostack/source/6LoWPAN/Fragmentation
        sal-stack-nanostack/source/6LoWPAN/Bootstraps
        sal-stack-nanostack/source/6LoWPAN
        sal-stack-nanostack/source
        sal-stack-nanostack/nanostack/platform
        sal-stack-nanostack/nanostack
        sal-stack-nanostack-eventloop/source
        sal-stack-nanostack-eventloop/nanostack-event-loop/platform
        sal-stack-nanostack-eventloop/nanostack-event-loop
        sal-stack-nanostack-eventloop
        sal-stack-nanostack
        nanostack-interface
        nanostack-hal-mbed-cmsis-rtos
        mbed-mesh-api/source/include
        mbed-mesh-api/source
        mbed-mesh-api/mbed-mesh-api
        mbed-mesh-api
        coap-service/source/include
        coap-service/source
        coap-service/coap-service
        coap-service
        mbed-os/features/nanostack
)
